# mv-face-recognition

./: .gitattributes  .gitignore  README.md  album1.html  album2.html  contestant_info.csv  face_detect.py  face_verification_results.csv  generate_catalogue.py  generate_sample.py  get_photo_list.py  hello.py  mv-face-recognition.py  photo_download.py  photo_rename.py  pyproject.toml  video_recognition_results.csv  videos_dl.py
docs/: _config.yml  catalogue.md  index.md
mv_face_recognition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
source/photo/contestants/: 2Ling_embedding.npy  3 妹_embedding.npy  Ace_embedding.npy  Ada 仔_embedding.npy  Alice_embedding.npy  Ana_embedding.npy  Ariel_embedding.npy  Ariels_embedding.npy  Ash_embedding.npy  Ashi_embedding.npy  Bubu_embedding.npy  CK_embedding.npy  Caca_embedding.npy  Candy_embedding.npy  Carina_embedding.npy  Carmina_embedding.npy  Catrina_embedding.npy  Chloe Au_embedding.npy  Christine_embedding.npy  Day_embedding.npy  Dru_embedding.npy  Elka_embedding.npy  Emi_embedding.npy  Emiko_embedding.npy  Gao_embedding.npy  Hannah_embedding.npy  Ika_embedding.npy  Ivy So_embedding.npy  Jackie_embedding.npy  Jade Chan_embedding.npy  Jolin_embedding.npy  Karen_embedding.npy  Kay_embedding.npy  Kinki_embedding.npy  Liu 哥_embedding.npy  Man C_embedding.npy  Marf_embedding.npy  May May_embedding.npy  Mei Mei_embedding.npy  Michelle_embedding.npy  (+55 more)
source/photo/raw/: album1_image_urls.txt  album2_image_urls.txt
