[project]
name = "mv-face-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp",
    "requests",
    "beautifulsoup4",
    "lxml-html-clean>=0.2.2",
    "tqdm>=4.66.5",
    "selenium>=4.24.0",
    "webdriver-manager>=4.0.2",
    "deepface>=0.0.93",
    "tf-keras>=2.17.0",
    "pandas>=2.1.1",
    "streamlit>=1.38.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.19.2",
    "opencv-utf-8>=0.0.5",
    "freetype-py>=2.5.1",
    "pillow>=10.4.0",
    "ffmpeg-python>=0.2.0",
]
